<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <com.dev.rexhuang.rui.nav.RNavigationBar
        android:id="@+id/nav_bar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_48"
        app:nav_line_color="@color/color_d1d2"
        app:nav_line_height="1px" />

    <com.dev.rexhuang.rui.input.InputItemLayout
        android:id="@+id/input_item_orderId"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_48"
        android:layout_marginTop="@dimen/dp_10"
        android:background="@color/color_white"
        android:paddingLeft="@dimen/dp_16"
        app:bottomLineAppearance="@style/leftMargin_lineAppearance"
        app:hint="@string/input_item_hint_invite_id"
        app:inputTextAppearance="@style/inputTextAppearance_limitLength"
        app:inputType="number"
        app:maxInputLength="4"
        app:title="@string/input_item_title_invite_id"
        app:titleTextAppearance="@style/titleTextAppearance"
        app:topLineAppearance="@style/lineAppearance" />

    <com.dev.rexhuang.rui.input.InputItemLayout
        android:id="@+id/input_item_username"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_48"
        android:background="@color/color_white"
        android:paddingLeft="@dimen/dp_16"
        app:bottomLineAppearance="@style/leftMargin_lineAppearance"
        app:hint="@string/input_item_hint_user_name"
        app:inputTextAppearance="@style/inputTextAppearance"
        app:inputType="text"
        app:title="@string/input_item_title_user_name"
        app:titleTextAppearance="@style/titleTextAppearance" />

    <com.dev.rexhuang.rui.input.InputItemLayout
        android:id="@+id/input_item_pwd"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_48"
        android:background="@color/color_white"
        android:paddingLeft="@dimen/dp_16"
        app:bottomLineAppearance="@style/leftMargin_lineAppearance"
        app:hint="@string/input_item_hint_pwd"
        app:inputTextAppearance="@style/inputTextAppearance"
        app:inputType="password"
        app:title="@string/input_item_title_pwd"
        app:titleTextAppearance="@style/titleTextAppearance" />


    <com.dev.rexhuang.rui.input.InputItemLayout
        android:id="@+id/input_item_pwd_check"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_48"
        android:background="@color/color_white"
        android:paddingLeft="@dimen/dp_16"
        app:bottomLineAppearance="@style/lineAppearance"
        app:hint="@string/input_item_hint_pwd2"
        app:inputTextAppearance="@style/inputTextAppearance"
        app:inputType="password"
        app:title="@string/input_item_title_pwd2"
        app:titleTextAppearance="@style/titleTextAppearance" />


    <com.google.android.material.button.MaterialButton
        android:id="@+id/action_submit"
        android:layout_width="match_parent"
        android:layout_height="58dp"
        android:layout_marginLeft="@dimen/dp_10"
        android:layout_marginTop="@dimen/dp_10"
        android:layout_marginRight="@dimen/dp_10"
        android:gravity="center"
        android:text="@string/action_submit"
        android:textSize="16sp"
        app:backgroundTint="@color/color_dd2"
        app:cornerRadius="@dimen/dp_6" />
</LinearLayout>